{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "520219da-0119-4dcf-87af-966721e6b8b3",
            "actions": [
                {
                    "name": "TurnLeft",
                    "type": "PassThrough",
                    "id": "de0d35c2-8fb9-420b-aa90-374ee98038fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnRIght",
                    "type": "PassThrough",
                    "id": "9d304913-3001-4d4e-94b1-43ba4eed873f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3931ae5-9198-4c59-b7c6-cac9a3c9fd60",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbd6b7df-2ecf-4517-a6cc-ed384c267cc6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRIght",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}